# NegoLog-LLM

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  tournament_example.yaml
agents/: __init__.py
agents/HybridAgent/: HybridAgent.py  HybridAgentWithOppModel.py
agents/LLMBasedAgent/: LLMBasedAgent.py  emotional.py  emotionless.py
agents/LLMBasedAgent/Generation/: Claude.py  Google.py  Openai.py  generation.py  prompts.py  pydantic_generator.py
domains/domain80/: profileA.json  profileB.json  specs.json
domains/domain81/: profileA.json  profileB.json  specs.json
domains/domain82/: profileA.json  profileB.json  specs.json
nenv/: Bid.py  Tournament.py
tournament_configurations/: tournament_example.yaml
