[tool.poetry]
name = "negolog-llm"
version = "0.1.0"
description = "NegoLog-LLM project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.2.0,<3.0.0"
matplotlib = ">=3.8.2,<4.0.0"
seaborn = ">=0.13.1,<0.14.0"
scipy = ">=1.12.0,<2.0.0"
scikit-learn = ">=1.4.0,<2.0.0"
openpyxl = ">=3.1.2,<4.0.0"
numba = ">=0.58.0,<1.0.0"
PyYAML = ">=6.0.1,<7.0.0"
plotly = ">=5.18.0,<6.0.0"
Flask = ">=3.0.2,<4.0.0"
Flask-Cors = ">=4.0.0,<5.0.0"
langchain = ">=0.3.21,<0.4.0"
openai = ">=1.68.2,<2.0.0"
langchain-experimental = "^0.3.3"
langchain-anthropic = "^0.3.1"
langchain-google-genai = "^2.0.7"
langchain-openai = "^0.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 